# hobot_audio

./: CHANGELOG.md  CMakeLists.txt  README.md  README_cn.md  package.xml
config/: audio_config.json
include/audio_capture/: hb_audio_capture.h
include/audio_engine/: audioengine.h
include/x3/horizon_speech_sdk/include/horizonspeechsdk/: hrsc_sdk.h
launch/: hobot_audio.launch.py
src/: audio_example.cpp
src/audio_capture/: hb_audio_capture.cpp
src/audio_engine/: audioengine.cpp
